--- a/index.html
+++ b/index.html
@@ -1,71 +1,127 @@
-<!--index, pagina de inicio -->
 <!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-      <title>Silent Hill 2 - Inicio</title>
+    <title>Silent Hill 2 - Inicio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="img/sh.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <style>
+        /* Estilo general */
+        body {
+            background-color: #0a0a0a;
+            color: #dcdcdc;
+            font-family: 'Special Elite', sans-serif;
+        }
+
+        /* Estilo del banner con animación */
+        .header {
+            position: relative;
+            background: url('img/banner.jpg') no-repeat center center;
+            background-size: cover;
+            color: #e5e5e5;
+            text-align: center;
+            padding: 100px 0;
+            overflow: hidden;
+        }
+
+        .header__title {
+            font-size: 3.5em;
+            font-weight: bold;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+            animation: flicker 1.5s infinite alternate;
+        }
+
+        /* Efecto de parpadeo para el título */
+        @keyframes flicker {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.7; }
+        }
+
+        /* Estilo oscuro para la barra de navegación */
+        .navbar-dark .navbar-nav .nav-link {
+            color: #cccccc;
+            transition: color 0.3s ease;
+        }
+
+        .navbar-dark .navbar-nav .nav-link:hover {
+            color: #ffffff;
+        }
+
+        .main__section {
+            background-color: #1a1a1a;
+            padding: 2em;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
+            margin-bottom: 2em;
+        }
+
+        .main__section-title {
+            color: #fffae6;
+        }
+
+        /* Estilo oscuro para el footer */
+        .footer {
+            background-color: #101010;
+            color: #aaa;
+            padding: 1em;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Silent Hill 2</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="personajes.html">Personajes</a></li>
-                <li><a href="lugares.html">Lugares</a></li>
-            </ul>
-        </nav>
+    <header class="header">
+        <h1 class="header__title">Silent Hill 2</h1>
     </header>
-    <main>
-          <!-- contenido main del index -->
-        <section id="introduccion">
-            <h2>Introducción</h2>
-            <p>Silent Hill 2 (remake) es un juego de terror psicológico lanzado en 2024. 
-                <br>Aclamado por su narrativa, con tintes psicologicos, profunda y su atmósfera opresiva, encarnaremos a James Sunderland
-                <br> mientras busca a su esposa fallecida en el inquietante pueblo de Silent Hill.</p>
-        </section>
 
-        <section id="contenido-principal">
-            <img src="img/portada.jpg" alt="Portada Silent Hill 2">
-            <p>El juego explora temas como la culpa, el sufrimiento y las emociones humanas en un entorno de las peores pesadillas que puedes tener.</p>
-        </section>
-
-        <!--article y aside -->
-        <section id="detalles">
-            <article>
-                <h2>Detalles del Juego</h2>
-                <p>Silent Hill 2 es conocido por su profunda inmersión en el terror psicológico. 
-                    <br>En contraste con otros juegos de la serie, este título se enfoca menos en la acción y más en la exploración de los traumas emocionales de sus personajes.</p>
-                <p>A medida que avanzas, el ambiente opresivo y los simbolismos se vuelven más densos, con criaturas como Pyramid Head, que representa la culpa y el tormento de James.</p>
-            </article>
-
-            <aside>
-                <h2>Información Adicional</h2>
-                <ul>
-                    <li><a href="https://es.wikipedia.org/wiki/Silent_Hill_2_(videojuego_de_2024)" target="_blank">Wikipedia</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=5B-YGFARv7M" target="_blank">Tráiler del juego</a></li>
-                    <li><a href="https://www.konami.com/games/silenthill/2r/gate" target="_blank">Sitio oficial</a></li>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Silent Hill 2</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="personajes.html">Personajes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="lugares.html">Lugares</a></li>
+                    <li class="nav-item"><a class="nav-link" href="historia.html">Historia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="monstruos.html">Monstruos</a></li>
                 </ul>
-                <p><strong>Desarrollado por:</strong> Team Silent</p>
-                <p><strong>Año de lanzamiento:</strong> 2024</p>
-            </aside>
+            </div>
+        </div>
+    </nav>
+
+    <main class="container mt-5">
+        <section class="main__section" id="introduccion">
+            <h2 class="main__section-title">Introducción</h2>
+            <p>Silent Hill 2 es un clásico del género de terror psicológico. Lanzado por primera vez en 2001 y con un remake en 2024, ha cautivado a generaciones de jugadores con su oscura narrativa y su atmósfera única.</p>
+        </section>
+
+        <section class="main__section" id="contenido-principal">
+            <img src="img/portada.jpg" class="img-fluid rounded mb-3" alt="Portada Silent Hill 2">
+            <p>El juego se caracteriza por su enfoque en temas psicológicos como la culpa, el remordimiento y el duelo, los cuales están profundamente integrados en los personajes, los escenarios y las criaturas del juego.</p>
+        </section>
+
+        <section class="main__section" id="detalles">
+            <h2>Detalles del Juego</h2>
+            <p>Silent Hill 2 es ampliamente aclamado por su innovadora narrativa y su atmósfera opresiva, con enemigos como Pyramid Head y la enfermera deformada, el juego provoca miedo a través de la simbología y el diseño de sus personajes.</p>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer text-center">
+        <p>Roberto Cesar Bonilla Cruz</p>
         <div>
-            <p>Roberto Cesar Bonilla Cruz</p>
-              <!-- indice repetido para no scrolear hasta arriba -->
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="personajes.html">Personajes</a></li>
-                    <li><a href="lugares.html">Lugares</a></li>
-                </ul>
-            </nav>
+            <a href="index.html" class="text-secondary mx-2">Inicio</a>
+            <a href="personajes.html" class="text-secondary mx-2">Personajes</a>
+            <a href="lugares.html" class="text-secondary mx-2">Lugares</a>
+            <a href="historia.html" class="text-secondary mx-2">Historia</a>
+            <a href="monstruos.html" class="text-secondary mx-2">Monstruos</a>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
