--- a/lugares.html
+++ b/lugares.html
@@ -1,60 +1,57 @@
 <!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-       <title>Silent Hill 2 - Lugares Emblemáticos</title>
+    <title>Silent Hill 2 - Lugares Emblemáticos</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
-<!--indice-->
 <body>
-    <header>
-        <h1>Lugares iconicos de Silent Hill 2</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="personajes.html">Personajes</a></li>
-                <li><a href="lugares.html">Lugares</a></li>
+    <header class="header">
+        <h1 class="header__title">Lugares de Silent Hill 2</h1>
+        <nav class="header__nav">
+            <ul class="header__nav-list">
+                <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
+                <li class="header__nav-item"><a href="personajes.html" class="header__nav-link">Personajes</a></li>
+                <li class="header__nav-item"><a href="lugares.html" class="header__nav-link">Lugares</a></li>
+                <li class="header__nav-item"><a href="historia.html" class="header__nav-link">Historia</a></li>
+                <li class="header__nav-item"><a href="monstruos.html" class="header__nav-link">Monstruos</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <!--secciones -->
-        <section>
-            <h2>Pueblo de Silent Hill</h2>
+    <main class="main">
+        <section class="main__section">
+            <h2 class="main__section-title">Pueblo de Silent Hill</h2>
             <img src="img/pueblo.jpg" alt="Pueblo de Silent Hill">
-            <p>El pueblo de Silent Hill es el escenario principal del juego. 
-                <br>Es un lugar envuelto en niebla, lleno de misterios y criaturas aterradoras. 
-                <br>Cada rincón del pueblo esconde secretos relacionados con el pasado de James y los pecados que debe enfrentar.</p>
+            <p>El misterioso pueblo de Silent Hill está cubierto de niebla y lleno de criaturas monstruosas. 
+                <br>Es un lugar donde la realidad y la pesadilla se entrelazan, y donde los personajes enfrentan sus mayores miedos y pecados.</p>
         </section>
 
-        <section>
-            <h2>Hospital Brookhaven</h2>
+        <section class="main__section">
+            <h2 class="main__section-title">Hospital Brookhaven</h2>
             <img src="img/lugares.jpg" alt="Hospital Brookhaven">
-            <p>Este hospital es uno de los lugares más inquietantes del juego. 
-                <br>Lleno de enfermeras deformes y moustros de todo tipo, el Hospital Brookhaven es un reflejo de la mente fragmentada y retorcida de James.
-                <br>En donde la realidad y las pesadilla de el se entrelazan.</p>
+            <p>El hospital es uno de los lugares más inquietantes del juego, lleno de corredores oscuros y enfermeras deformes. 
+                <br>Aquí, los jugadores experimentan el miedo psicológico en su forma más cruda, ya que el hospital refleja los miedos y la culpa de los personajes.</p>
         </section>
 
-        <section>
-            <h2>Lago Toluca</h2>
+        <section class="main__section">
+            <h2 class="main__section-title">Lago Toluca</h2>
             <img src="img/lago.jpg" alt="Lago Toluca">
-            <p>El Lago Toluca es un lugar importante en la historia de Silent Hill. 
-                <br>Es el sitio donde James y Mary pasaron buenos momentos, pero también es donde la oscuridad del pueblo parece 
-                <br>ser más profunda y donde los secretos del pasado de James salen a la superficie.</p>
+            <p>El Lago Toluca tiene una importancia especial en la historia de Silent Hill. 
+                <br>Es un lugar clave donde se revelan importantes detalles sobre el pasado de James y su relación con su esposa.</p>
         </section>
     </main>
-    <!--indice de abajo -->
-    <footer>
-        <div>
-            <p>Roberto Cesar Bonilla Cruz</p>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="personajes.html">Personajes</a></li>
-                    <li><a href="lugares.html">Lugares</a></li>
-                </ul>
-            </nav>
-        </div>
+    <footer class="footer">
+        <p>Roberto Cesar Bonilla Cruz</p>
+        <nav class="footer__nav">
+            <ul class="footer__nav-list">
+                <li class="footer__nav-item"><a href="index.html" class="footer__nav-link">Inicio</a></li>
+                <li class="footer__nav-item"><a href="personajes.html" class="footer__nav-link">Personajes</a></li>
+                <li class="footer__nav-item"><a href="lugares.html" class="footer__nav-link">Lugares</a></li>
+                <li class="footer__nav-item"><a href="historia.html" class="footer__nav-link">Historia</a></li>
+                <li class="footer__nav-item"><a href="monstruos.html" class="footer__nav-link">Monstruos</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
