--- a/monstruos.html
+++ b/monstruos.html
@@ -10,7 +10,7 @@
 <body class="monstruos">
     <header class="header historia">
         <div class="header__overlay"></div>
-        <h1 class="header__title historia">Historia de Silent Hill 2</h1>
+        <h1 class="header__title historia">Monstruos de Silent Hill 2</h1>
         <nav class="header__nav">
             <ul class="header__nav-list">
                 <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
