--- a/personajes.html
+++ b/personajes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
     <!-- Banner con título y navegación -->
     <header class="header">
         <div class="header__overlay"></div>
-        <h1 class="header__title">Silent Hill 2</h1>
+        <h1 class="header__title">Personajes de Silent Hill 2</h1>
         <nav class="header__nav">
             <ul class="header__nav-list">
                 <li class="header__nav-item"><a href="index.html" class="header__nav-link">Inicio</a></li>
@@ -26,8 +26,7 @@
 
     <!-- Título de la sección de personajes -->
     <div class="container text-center py-4">
-        <h2 class="header__title" style="font-family: 'Special Elite', cursive;">Personajes de Silent Hill 2</h2>
-    </div>
+            </div>
     
     <!-- Contenido principal con la cuadrícula de personajes -->
     <main class="main container mt-5 personajes-grid">
