--- a/monstruos.html
+++ b/monstruos.html
@@ -79,8 +79,15 @@
         </div>
     </main>
     
-    <footer class="footer bg-dark text-white text-center py-3">
+    <footer class="footer text-center">
         <p>Roberto Cesar Bonilla Cruz</p>
+        <div>
+            <a href="index.html" class="text-secondary mx-2">Inicio</a>
+            <a href="personajes.html" class="text-secondary mx-2">Personajes</a>
+            <a href="lugares.html" class="text-secondary mx-2">Lugares</a>
+            <a href="historia.html" class="text-secondary mx-2">Historia</a>
+            <a href="monstruos.html" class="text-secondary mx-2">Monstruos</a>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
