--- a/personajes.html
+++ b/personajes.html
@@ -24,11 +24,11 @@ o<!DOCTYPE html>
         </nav>
     </header>
 
-    <!-- Título de la sección de personajes -->
+    
     <div class="container text-center py-4">
             </div>
     
-    <!-- Contenido principal con la cuadrícula de personajes -->
+    <!-- Contenido principal con grid pj -->
     <main class="main container mt-5 personajes-grid">
         <div class="row">
             <section class="col-md-4 mb-4 text-center">
@@ -77,7 +77,7 @@ o<!DOCTYPE html>
         </nav>
     </footer>
 
-    <!-- Bootstrap JavaScript -->
+    <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
