--- a/historia.html
+++ b/historia.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Silent Hill 2 - Historia</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Silent Hill 2 es un videojuego de terror psicológico. Descubre la historia, personajes y lugares emblemáticos del juego.">
+        <meta name="keywords" content="Silent Hill, videojuego, terror, psicológico, historia, personajes, lugares">
+        <title>Silent Hill 2 - Inicio</title>
+        <link rel="shortcut icon" href="img/sh.ico" />
+        <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
+    </head>
 <body class="historia">
     <header class="header historia">
         <div class="header__overlay"></div>
@@ -52,8 +56,16 @@
         </section>
     </main>
 
-    <footer class="footer historia">
+    <footer class="footer">
         <p>Roberto Cesar Bonilla Cruz</p>
+        <div>
+            <a href="index.html" class="footer__nav-link">Inicio</a>
+            <a href="personajes.html" class="footer__nav-link">Personajes</a>
+            <a href="lugares.html" class="footer__nav-link">Lugares</a>
+            <a href="historia.html" class="footer__nav-link">Historia</a>
+            <a href="monstruos.html" class="footer__nav-link">Monstruos</a>
+        </div>
     </footer>
+    
 </body>
 </html>
