--- a/monstruos.html
+++ b/monstruos.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Silent Hill 2 es un videojuego de terror psicológico. Descubre la historia, personajes, mosutros y lugares emblemáticos del juego.">
+    <meta name="keywords" content="Silent Hill, videojuego, terror, psicológico, historia, personajes, lugares">
     <title>Silent Hill 2 - Monstruos</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
