--- a/personajes.html
+++ b/personajes.html
@@ -1,7 +1,10 @@
-o<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Silent Hill 2 es un videojuego de terror psicológico. Descubre la historia, personajes y lugares emblemáticos del juego.">
+    <meta name="keywords" content="Silent Hill, videojuego, terror, psicológico, historia, personajes, lugares">
     <title>Silent Hill 2 - Personajes</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
@@ -9,7 +12,6 @@ o<!DOCTYPE html>
 </head>
 <body class="bg-dark text-light">
 
-    <!-- Banner con título y navegación -->
     <header class="header">
         <div class="header__overlay"></div>
         <h1 class="header__title">Personajes de Silent Hill 2</h1>
@@ -24,11 +26,7 @@ o<!DOCTYPE html>
         </nav>
     </header>
 
-    
-    <div class="container text-center py-4">
-            </div>
-    
-    <!-- Contenido principal con grid pj -->
+    <!-- grid -->
     <main class="main container mt-5 personajes-grid">
         <div class="row">
             <section class="col-md-4 mb-4 text-center">
@@ -60,24 +58,28 @@ o<!DOCTYPE html>
                 <img src="img/laura.png" alt="Laura" class="img-fluid">
                 <p>Laura es una niña que también aparece en Silent Hill, en busca de alguien especial para ella. Representa la inocencia y una conexión diferente con James, mostrándose ajena a las oscuras manifestaciones del pueblo.</p>
             </section>
+
+            <section class="col-md-4 mb-4 text-center">
+                <h2 class="main__section-title">Mary Sunderland</h2>
+                <img src="img/mary.png" alt="Mary Sunderland" class="img-fluid">
+                <p>Mary es la esposa fallecida de James. Su muerte es el detonante de los eventos de Silent Hill 2. Aunque no aparece mucho físicamente, su influencia y recuerdos son fundamentales para la historia y los tormentos de James.</p>
+            </section>
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer bg-secondary text-center py-3 mt-5">
+    <footer class="footer">
         <p>Roberto Cesar Bonilla Cruz</p>
         <nav class="footer__nav">
-            <ul class="footer__nav-list list-inline">
-                <li class="footer__nav-item list-inline-item"><a href="index.html" class="footer__nav-link text-light">Inicio</a></li>
-                <li class="footer__nav-item list-inline-item"><a href="personajes.html" class="footer__nav-link text-light">Personajes</a></li>
-                <li class="footer__nav-item list-inline-item"><a href="lugares.html" class="footer__nav-link text-light">Lugares</a></li>
-                <li class="footer__nav-item list-inline-item"><a href="historia.html" class="footer__nav-link text-light">Historia</a></li>
-                <li class="footer__nav-item list-inline-item"><a href="monstruos.html" class="footer__nav-link text-light">Monstruos</a></li>
+            <ul class="footer__nav-list">
+                <li class="footer__nav-item"><a href="index.html" class="footer__nav-link">Inicio</a></li>
+                <li class="footer__nav-item"><a href="personajes.html" class="footer__nav-link">Personajes</a></li>
+                <li class="footer__nav-item"><a href="lugares.html" class="footer__nav-link">Lugares</a></li>
+                <li class="footer__nav-item"><a href="historia.html" class="footer__nav-link">Historia</a></li>
+                <li class="footer__nav-item"><a href="monstruos.html" class="footer__nav-link">Monstruos</a></li>
             </ul>
         </nav>
     </footer>
 
-    <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
