--- a/lugares.html
+++ b/lugares.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Silent Hill 2 - Lugares Emblemáticos</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Silent Hill 2 es un videojuego de terror psicológico. Descubre la historia, personajes y lugares emblemáticos del juego.">
+        <meta name="keywords" content="Silent Hill, videojuego, terror, psicológico, historia, personajes, lugares">
+        <title>Silent Hill 2 - Inicio</title>
+        <link rel="shortcut icon" href="img/sh.ico" />
+        <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
+    </head>
 <body>
     <header class="header">
         <h1 class="header__title">Lugares de Silent Hill 2</h1>
