--- a/historia.html
+++ b/historia.html
@@ -43,7 +43,7 @@
                     Para James, Silent Hill se convierte en una prisión mental, donde cada rincón del pueblo refleja los horrores de su psique.
                     Las criaturas que lo atormentan, como Pyramid Head, no son simples monstruos; son manifestaciones físicas de su culpa, su deseo de castigo, y el remordimiento por las decisiones que ha tomado.</p>
             </div>
-            <img src="img/historia2.jpg" alt="James Sunderland" class="main__image historia">
+            <img src="img/jamesunderland.jpg" alt="James Sunderland" class="main__image historia">
         </section>
 
         <section class="main__section historia">
